[tool.poetry]
name = "spoor.ai"
version = "0.1.0"
description = "spoor.ai test task"
authors = ["Diego Carrasco <22986819+decardev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
torch = "^1.10.2"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
Pillow = "^9.0.1"
PyYAML = "^6.0"
requests = "^2.27.1"
scipy = "^1.8.0"
torchvision = "^0.11.3"
tqdm = "^4.62.3"
tensorboard = "^2.8.0"
wandb = "^0.12.10"
pandas = "^1.4.1"
seaborn = "^0.11.2"
thop = "^0.0.31"
black = "^22.1.0"
typer = "^0.4.0"
opencv-python = "^4.5.5"
ipython = "^8.0.1"
peewee = "^3.14.9"
SQLAlchemy = "^1.4.31"
prefect = "^1.0.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
